--- a/app/src/main/res/layout/side_tabs_fragment.xml
+++ b/app/src/main/res/layout/side_tabs_fragment.xml
@@ -8,13 +8,11 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <include
+        android:id="@+id/app_bar_main"
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:popupTheme="@style/CustomActionBar" />
-
-    <include layout="@layout/content_main" />
+        android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
