--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -2,19 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_navigation"
-    app:startDestination="@id/signInFragment">
+    android:id="@+id/main_navigation">
 
-
-    <fragment
-        android:id="@+id/tabsFragment"
-        android:name="com.example.expensetracker.presentation.tabs.TabsFragment"
-        android:label="fragment_tabs"
-        tools:layout="@layout/fragment_tabs" >
-        <action
-            android:id="@+id/action_tabsFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
-    </fragment>
     <fragment
         android:id="@+id/signInFragment"
         android:name="com.example.expensetracker.presentation.signin.SignInFragment"
@@ -26,7 +15,7 @@
             app:enterAnim="@anim/slide_up"
             app:popExitAnim="@anim/slide_down"
             app:popUpTo="@id/main_navigation"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="true"/>
         <action
             android:id="@+id/action_signInFragment_to_signUpFragment"
             app:destination="@id/signUpFragment"
@@ -34,12 +23,17 @@
             app:popExitAnim="@anim/slide_down"
             app:popUpTo="@id/main_navigation"
             app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_signInFragment_to_exchangeRatesFragment"
+            app:destination="@id/exchangeRatesFragment" />
     </fragment>
+
     <fragment
-        android:id="@+id/detailFragment"
-        android:name="com.example.expensetracker.presentation.detail.DetailFragment"
-        android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" />
+        android:id="@+id/exchangeRatesFragment"
+        android:name="com.example.expensetracker.presentation.exchange_rates.ExchangeRatesFragment"
+        android:label="exchange_rates_fragment"
+        tools:layout="@layout/exchange_rates_fragment" />
+
     <fragment
         android:id="@+id/signUpFragment"
         android:name="com.example.expensetracker.presentation.signup.SignUpFragment"
@@ -59,5 +53,20 @@
             app:popUpTo="@id/main_navigation"
             app:popUpToInclusive="true"/>
     </fragment>
+
+    <fragment
+        android:id="@+id/tabsFragment"
+        android:name="com.example.expensetracker.presentation.tabs.TabsFragment"
+        android:label="fragment_tabs"
+        tools:layout="@layout/fragment_tabs" >
+        <action
+            android:id="@+id/action_tabsFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="com.example.expensetracker.presentation.detail.DetailFragment"
+        android:label="fragment_detail"
+        tools:layout="@layout/fragment_detail" />
 
 </navigation>
