adding exchange rates screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="Caption_gray">#C4C4C4</color>
     <color name="error_red">#E83F3F</color>
     <color name="green_mark">#71B082</color>
+    <color name="green">#00A12B</color>
 
 
     <color name="status_red">#EED3D3</color>
