--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,11 +6,16 @@
             android:id="@+id/people"
             android:enabled="true"
             android:icon="@drawable/ic_home"
-            android:title="@string/home" />
+            android:title="@string/tasks" />
         <item
-            android:id="@+id/exchange_rates"
+            android:id="@+id/rankings"
             android:enabled="true"
             android:icon="@drawable/ic_exchange_svgrepo_com"
-            android:title="@string/exchange_rates" />
+            android:title="@string/Rankings" />
+        <item
+            android:id="@+id/profile"
+            android:enabled="true"
+            android:icon="@drawable/ic_baseline_person_24"
+            android:title="@string/profile" />
     </group>
 </menu>
