--- a/app/src/main/res/navigation/home.xml
+++ b/app/src/main/res/navigation/home.xml
@@ -7,7 +7,6 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.expensetracker.presentation.home.HomeFragment"
-        android:label="HomeFragment" >
-    </fragment>
+        android:label="HomeFragment" />
 
 </navigation>
