--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -2,7 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_navigation">
+    android:id="@+id/main_navigation"
+    tools:ignore="InvalidNavigation">
 
     <fragment
         android:id="@+id/signInFragment"
@@ -26,10 +27,10 @@
     </fragment>
 
     <fragment
-        android:id="@+id/exchangeRatesFragment"
-        android:name="com.example.expensetracker.presentation.exchange_rates.ExchangeRatesFragment"
+        android:id="@+id/rankingsFragment"
+        android:name="com.example.expensetracker.presentation.rankings.RankingFragment"
         android:label="exchange_rates_fragment"
-        tools:layout="@layout/exchange_rates_fragment" />
+        tools:layout="@layout/rankings_fragment" />
 
     <fragment
         android:id="@+id/signUpFragment"
@@ -67,5 +68,10 @@
         android:name="com.example.expensetracker.presentation.transactions.TransactionsFragment"
         android:label="fragment_transactions"
         tools:layout="@layout/fragment_transactions" />
+    <action android:id="@+id/action_global_signInFragment"
+        app:destination="@id/signInFragment"
+        app:launchSingleTop="false"
+        app:popUpTo="@id/main_navigation"
+        app:popUpToInclusive="true"/>
 
 </navigation>
