--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_l"
+        android:layout_marginTop="@dimen/spacing_16dp"
         android:text="@string/sign_up"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textColor="@color/primary_gray"
@@ -22,14 +22,14 @@
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_l"
-        android:layout_marginEnd="@dimen/spacing_l"
-        android:layout_marginTop="@dimen/spacing_8xl"
+        android:layout_marginStart="@dimen/spacing_16dp"
+        android:layout_marginEnd="@dimen/spacing_16dp"
+        android:layout_marginTop="@dimen/spacing_124dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopStart="@dimen/spacing_x"
-        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
+        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
+        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
         android:hint="@string/email"
         android:textColorHint="@color/gray"
         app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
@@ -45,14 +45,14 @@
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_l"
-        android:layout_marginEnd="@dimen/spacing_l"
-        android:layout_marginTop="@dimen/spacing_l"
+        android:layout_marginStart="@dimen/spacing_16dp"
+        android:layout_marginEnd="@dimen/spacing_16dp"
+        android:layout_marginTop="@dimen/spacing_16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopStart="@dimen/spacing_x"
-        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
+        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
+        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
         android:hint="@string/password"
         android:textColorHint="@color/gray"
         app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
@@ -71,12 +71,12 @@
         android:hint="@string/repeat_password"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:textColorHint="@color/gray"
-        android:layout_marginTop="@dimen/spacing_l"
-        android:layout_marginStart="@dimen/spacing_l"
-        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
-        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
-        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopStart="@dimen/spacing_x"
+        android:layout_marginTop="@dimen/spacing_16dp"
+        android:layout_marginStart="@dimen/spacing_16dp"
+        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
         app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,9 +92,9 @@
         android:id="@+id/btnSignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_l"
-        android:layout_marginStart="@dimen/spacing_l"
-        android:layout_marginEnd="@dimen/spacing_l"
+        android:layout_marginTop="@dimen/spacing_16dp"
+        android:layout_marginStart="@dimen/spacing_16dp"
+        android:layout_marginEnd="@dimen/spacing_16dp"
         android:text="@string/sign_up"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/spacing_4xl"
+        android:layout_marginBottom="@dimen/spacing_54dp"
         android:text="@string/already_have_an_account"
         android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
         android:textSize="16sp"
@@ -117,8 +117,8 @@
         android:id="@+id/tvSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_2xs"
-        android:layout_marginBottom="@dimen/spacing_4xl"
+        android:layout_marginStart="@dimen/spacing_4dp"
+        android:layout_marginBottom="@dimen/spacing_54dp"
         android:text="@string/sign_in"
         android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
         android:textColor="@color/black"
@@ -130,8 +130,8 @@
         android:id="@+id/tvForMargins"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_2xs"
-        android:layout_marginBottom="@dimen/spacing_4xl"
+        android:layout_marginStart="@dimen/spacing_4dp"
+        android:layout_marginBottom="@dimen/spacing_54dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
