--- a/app/src/main/res/layout/tribe_dialog.xml
+++ b/app/src/main/res/layout/tribe_dialog.xml
@@ -13,10 +13,10 @@
         android:hint="@string/name"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:textColorHint="@color/gray"
-        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
-        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
-        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopStart="@dimen/spacing_x"
+        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
 
         app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,10 +38,10 @@
         android:hint="@string/description"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:textColorHint="@color/gray"
-        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
-        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
-        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopStart="@dimen/spacing_x"
+        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
         app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
