--- a/app/src/main/res/layout/currency_item.xml
+++ b/app/src/main/res/layout/currency_item.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/spacing_2xl"
-    android:layout_marginStart="@dimen/spacing_xl"
-    android:layout_marginTop="@dimen/spacing_x"
-    android:layout_marginBottom="@dimen/spacing_x"
-    android:layout_marginEnd="@dimen/spacing_xl"
+    app:cardCornerRadius="@dimen/spacing_32dp"
+    android:layout_marginStart="@dimen/spacing_24dp"
+    android:layout_marginTop="@dimen/spacing_10dp"
+    android:layout_marginBottom="@dimen/spacing_10dp"
+    android:layout_marginEnd="@dimen/spacing_24dp"
     android:clickable="true"
     android:focusable="true">
 
@@ -19,7 +19,7 @@
             android:id="@+id/textView0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_xs"
+            android:layout_marginTop="@dimen/spacing_6dp"
             android:text="@string/tbc_market_value"
             android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Title"
             android:textColor="@color/black"
@@ -30,9 +30,9 @@
 
         <Button
             android:id="@+id/name"
-            android:layout_width="@dimen/spacing_4xl"
-            android:layout_height="@dimen/spacing_3xl"
-            android:layout_marginStart="@dimen/spacing_xl"
+            android:layout_width="@dimen/spacing_54dp"
+            android:layout_height="@dimen/spacing_40dp"
+            android:layout_marginStart="@dimen/spacing_24dp"
             android:backgroundTint="@color/green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +42,8 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_x"
-            android:layout_marginEnd="@dimen/spacing_x"
+            android:layout_marginTop="@dimen/spacing_10dp"
+            android:layout_marginEnd="@dimen/spacing_10dp"
             android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
             android:textColor="@color/primary_gray"
             android:textSize="18sp"
@@ -57,8 +57,8 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_x"
-            android:layout_marginEnd="@dimen/spacing_x"
+            android:layout_marginTop="@dimen/spacing_10dp"
+            android:layout_marginEnd="@dimen/spacing_10dp"
             android:text="@string/sell"
             android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
             android:textColor="@color/primary_gray"
@@ -71,8 +71,8 @@
             android:id="@+id/buyTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_x"
-            android:layout_marginBottom="@dimen/spacing_x"
+            android:layout_marginTop="@dimen/spacing_10dp"
+            android:layout_marginBottom="@dimen/spacing_10dp"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
@@ -83,8 +83,8 @@
             android:id="@+id/sellTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_x"
-            android:layout_marginBottom="@dimen/spacing_x"
+            android:layout_marginTop="@dimen/spacing_10dp"
+            android:layout_marginBottom="@dimen/spacing_10dp"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/textView5"
