--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_l"
+        android:layout_marginTop="@dimen/spacing_16dp"
         android:text="@string/sign_in"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textColor="@color/primary_gray"
@@ -23,14 +23,14 @@
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_l"
-        android:layout_marginEnd="@dimen/spacing_l"
-        android:layout_marginTop="@dimen/spacing_8xl"
+        android:layout_marginStart="@dimen/spacing_16dp"
+        android:layout_marginEnd="@dimen/spacing_16dp"
+        android:layout_marginTop="@dimen/spacing_124dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopStart="@dimen/spacing_x"
-        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
+        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
+        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
         android:hint="@string/email"
         android:textColorHint="@color/gray"
         app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
@@ -46,14 +46,14 @@
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_l"
-        android:layout_marginEnd="@dimen/spacing_l"
-        android:layout_marginTop="@dimen/spacing_l"
+        android:layout_marginStart="@dimen/spacing_16dp"
+        android:layout_marginEnd="@dimen/spacing_16dp"
+        android:layout_marginTop="@dimen/spacing_16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
-        app:boxCornerRadiusTopStart="@dimen/spacing_x"
-        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
+        app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopEnd="@dimen/spacing_10dp"
+        app:boxCornerRadiusTopStart="@dimen/spacing_10dp"
+        app:boxCornerRadiusBottomStart="@dimen/spacing_10dp"
         android:hint="@string/password"
         android:textColorHint="@color/gray"
         app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
@@ -69,9 +69,9 @@
         android:id="@+id/btnSignIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_l"
-        android:layout_marginStart="@dimen/spacing_l"
-        android:layout_marginEnd="@dimen/spacing_l"
+        android:layout_marginTop="@dimen/spacing_16dp"
+        android:layout_marginStart="@dimen/spacing_16dp"
+        android:layout_marginEnd="@dimen/spacing_16dp"
         android:text="@string/sign_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/spacing_l"
+        android:layout_marginTop="@dimen/spacing_16dp"
         android:text="@string/or_continue_with"
         android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
         android:textColor="@color/gray"
@@ -95,7 +95,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/spacing_4xl"
+        android:layout_marginBottom="@dimen/spacing_54dp"
         android:text="@string/don_t_have_an_account"
         android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
         android:textSize="16sp"
@@ -108,8 +108,8 @@
         android:id="@+id/tvSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_2xs"
-        android:layout_marginBottom="@dimen/spacing_4xl"
+        android:layout_marginStart="@dimen/spacing_4dp"
+        android:layout_marginBottom="@dimen/spacing_54dp"
         android:text="@string/sign_up"
         android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
         android:textColor="@color/black"
@@ -121,8 +121,8 @@
         android:id="@+id/tvForMargins"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_2xs"
-        android:layout_marginBottom="@dimen/spacing_4xl"
+        android:layout_marginStart="@dimen/spacing_4dp"
+        android:layout_marginBottom="@dimen/spacing_54dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,14 +130,14 @@
 
     <ProgressBar
         android:id="@+id/loadingProgressBar"
-        android:layout_width="@dimen/spacing_xl"
-        android:layout_height="@dimen/spacing_xl"
+        android:layout_width="@dimen/spacing_24dp"
+        android:layout_height="@dimen/spacing_24dp"
         android:indeterminateTint="@color/error_red"
         android:indeterminateTintMode="src_in"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/btnSignIn"
         app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
-        android:layout_marginEnd="@dimen/spacing_x"
+        android:layout_marginEnd="@dimen/spacing_10dp"
         app:layout_constraintTop_toTopOf="@+id/btnSignIn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
