--- a/app/src/main/res/layout/join_tribe.xml
+++ b/app/src/main/res/layout/join_tribe.xml
@@ -6,11 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etEmail"
+        android:id="@+id/inviteUrl"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:hint="@string/name"
+        android:hint="@string/invite"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         android:textColorHint="@color/gray"
         app:boxCornerRadiusBottomEnd="@dimen/spacing_10dp"
@@ -29,14 +29,14 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/create"
+        android:id="@+id/btnJoin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="@string/create"
+        android:text="@string/join_tribe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/inviteUrl" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
