--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/spacing_2xl"
-    android:layout_marginStart="@dimen/spacing_xl"
-    android:layout_marginTop="@dimen/spacing_x"
-    android:layout_marginBottom="@dimen/spacing_x"
-    android:layout_marginEnd="@dimen/spacing_xl"
+    app:cardCornerRadius="@dimen/spacing_32dp"
+    android:layout_marginStart="@dimen/spacing_24dp"
+    android:layout_marginTop="@dimen/spacing_10dp"
+    android:layout_marginBottom="@dimen/spacing_10dp"
+    android:layout_marginEnd="@dimen/spacing_24dp"
     android:clickable="true"
     android:focusable="true">
 
@@ -19,8 +19,8 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_4xl"
-            android:layout_marginTop="@dimen/spacing_xs"
+            android:layout_marginStart="@dimen/spacing_54dp"
+            android:layout_marginTop="@dimen/spacing_6dp"
             android:hint="asdasdassdasdasdasdas"
             android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Title"
             android:textColor="@color/black"
@@ -33,9 +33,9 @@
             android:id="@+id/txtDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/spacing_4xl"
-            android:layout_marginTop="@dimen/spacing_x"
-            android:layout_marginBottom="@dimen/spacing_x"
+            android:layout_marginStart="@dimen/spacing_54dp"
+            android:layout_marginTop="@dimen/spacing_10dp"
+            android:layout_marginBottom="@dimen/spacing_10dp"
             android:hint="@string/description"
             android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Caption"
 
@@ -48,7 +48,7 @@
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_x"
+            android:layout_marginTop="@dimen/spacing_10dp"
             android:hint="@string/description"
             android:text="@string/completed"
             android:textSize="17sp"
@@ -61,7 +61,7 @@
             android:id="@+id/checkBox"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="@dimen/spacing_3xl"
+            android:layout_marginEnd="@dimen/spacing_40dp"
             android:background="@color/gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
